src/App.css
.todo-list-component {
  position: absolute;
  top: 10vh;
  left: 30vw;
  height: 60vh;
  width: 40vw;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

.todo-list-container {
  height: 91%;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}

.add-todo {
  margin: 0 !important;
  width: 100%;
}

/* MDL UI Input text override */
.MuiInputBase-input-46 {
  height: 50px !important;
  font-size: 1.5em !important;
}

.list {
  height: 100%;
  width: 100%;
  margin: 0;
  list-style: none;
  padding-left: 0;
}

.list li {
  height: 35px;
  width: 100%;
  padding: 1em;
}

li:nth-child(2n) {
  background: #d3d3d3;
}

li:hover {
  background: #0e131871;
}

/* Scroll Bar */
::-webkit-scrollbar {
  -webkit-appearance: none;
}

::-webkit-scrollbar:vertical {
  width: 11px;
}

::-webkit-scrollbar:horizontal {
  height: 11px;
}

::-webkit-scrollbar-thumb {
  border-radius: 0;
  border: 2px solid white;
  background-color: rgba(0, 0, 0, .5);
}

::-webkit-scrollbar-track {
  background-color: #fff;
  border-radius: 0;
}

